refakator + poprawki aws
