# server/post_todo.js
@@ -1,0 +1,36 @@
+'use strict';
+
+const common = require('./common.todo')
+const crypto = require('crypto');
+const dynamo = common.dynamo()
+
+const makeID = (len, chars) => {
+    chars = chars || 'ybndrfg8ejkmcpqxot1uwisza3345h769';
+    var randomBytes = crypto.randomBytes(len);
+    return Array.from(randomBytes)
+        .map(x => x & (1 << 5) - 1)
+        .map(x => chars[x])
+        .join("");
+}
+
+exports.handler = (event, context, callback) => {
+    console.log('Received POST event:', JSON.stringify(event, null, 2));
+    let payload = JSON.parse(event.body)
+    let todo = {
+        ID: makeID(8),
+        UserID: payload.UserID,
+        Content: payload.Content,
+        CreatedAt: Date.now()
+    }
+    console.log("new note:", todo)
+    common.validateTodo(todo)
+        .then(todo => common.getTableName('Todos'))
+        .then(actualName => {
+            return dynamo.put({
+                TableName: actualName,
+                Item: todo,
+            }).promise().then(_ => todo)
+        })
+        .then(data => callback(null, common.makeResponse(null, data)))
+        .catch(error => callback(null, common.makeResponse(error)));
+}
